versioned_docs/version-5.1/document-extensions/counters/content/_indexing-nodejs.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

<Admonition type="note" title="">

* To index counters, create a [static index](../../../indexes/creating-and-deploying.mdx#static-indexes) 
that inherits from `AbstractCountersIndexCreationTask`.  

* Auto-indexes for counters are not available at this time.  

* In this page:  
  * [Usage](../../../document-extensions/counters/indexing.mdx#usage)  
  * [Querying the Index](../../../document-extensions/counters/indexing.mdx#querying-the-index)  

</Admonition>
## Usage

In order to index counter values, create an index that inherits from `AbstractCountersIndexCreationTask`. 
Next, choose one of these two methods which take the index expression:  

<TabItem value="javascript" label="javascript">
<CodeBlock language="javascript">
{`this.maps = new Set(["map"]);

this.map("map");
`}
</CodeBlock>
</TabItem>

`maps` indexes all the counters in the indexed documents. `addMap` only indexes the counters with 
the specified name.  

Examples of indexes using each method:  

<Tabs groupId='languageSyntax'>
<TabItem value="map" label="map">
<CodeBlock language="js">
{`class MyCounterIndex extends AbstractCountersIndexCreationTask {
     constructor() {
        super();

        this.map = "counters.Companies.HeartRate.Select(counter => new {\\n" +
            "    heartBeat = counter.Value,\\n" +
            "    name = counter.Name,\\n" +
            "    user = counter.DocumentId\\n" +
            "})";
    }
}
`}
</CodeBlock>
</TabItem>
</Tabs>  





## Querying the Index  

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="js">
{`const companies = session
    .query({index: "Companies_ByCounterNames"})
    .containsAny("counterNames", ["Likes"])
let results = await companies.all();
`}
</CodeBlock>
</TabItem>
</Tabs>  




